--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -4,8 +4,8 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"build": "tsc && node ./dist/index.js",
-		"dev": "nodemon"
+		"build": "bun build --target bun --minify ./src/index.ts --outdir ./build",
+		"dev": "bun run --watch ./src/index.ts"
 	},
 	"author": "",
 	"license": "ISC",
@@ -16,7 +16,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "24.2.0",
-		"nodemon": "^3.1.10",
 		"typescript": "5.9.2"
 	}
 }
