--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,16 +14,16 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.22.0",
-		"@sveltejs/vite-plugin-svelte": "^6.0.0",
-		"@tailwindcss/vite": "^4.0.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^7.0.4"
+		"@sveltejs/adapter-node": "5.2.12",
+		"@sveltejs/kit": "2.18.0",
+		"@sveltejs/vite-plugin-svelte": "5.0.3",
+		"@tailwindcss/vite": "4.0.12",
+		"prettier": "3.5.3",
+		"prettier-plugin-svelte": "3.3.3",
+		"svelte": "5.22.6",
+		"svelte-check": "4.1.5",
+		"tailwindcss": "4.0.12",
+		"typescript": "5.8.2",
+		"vite": "6.2.1"
 	}
 }
