--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -10,6 +10,9 @@ on:
 
 jobs:
   terraform:
+    defaults:
+      run:
+        working-directory: ./infra
     env:
       TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
     name: terraform
@@ -24,14 +27,9 @@ jobs:
           cli_config_credentials_token: ${{ env.TF_API_TOKEN }}
           terraform_version: ">= 1.2"
 
-      - name: Enter Terraform Directory
-        run: cd ./infra
-
-      - name: test
-        run: ls
-
       - name: Terraform Init
         run: terraform init
+
       - id: plan
         run: terraform plan -no-color
       - run: echo ${{ steps.plan.outputs.stdout }}
