--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -31,8 +31,12 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - id: plan
+      - name: Terraform Plan
+        id: plan
         run: terraform plan -no-color
-      - run: echo ${{ steps.plan.outputs.stdout }}
-      - run: echo ${{ steps.plan.outputs.stderr }}
-      - run: echo ${{ steps.plan.outputs.exitcode }}
+
+      - name: Logging Terraform Plan Results
+        run: |
+          echo ${{ steps.plan.outputs.stdout }}
+          echo ${{ steps.plan.outputs.stderr }}
+          echo ${{ steps.plan.outputs.exitcode }}
