core: changing paths config

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - services/lambdas
-      - infra
+      - infra/**/*
       - .github/workflows/**/*.yaml
   workflow_dispatch:
 
