--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,16 +1,32 @@
-name: Terraform CI/CD
+name: Terraform Deployment CI/CD
 
 on:
   push:
     branches:
       - main
     paths:
-      - services/lambdas/**/*
-      - infra/**/*
       - .github/workflows/**/*.yaml
+      - infra/**/*
+      - services/lambdas/**/*
   workflow_dispatch:
 
 jobs:
+  lambdas:
+    defaults:
+      run:
+        working-directory: services/lambdas
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+
+      - name: Node Build Lambdas
+        run: "npx tsc"
   terraform:
     defaults:
       run:
@@ -18,6 +34,7 @@ jobs:
     env:
       TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
     name: terraform
+    needs: [lambdas]
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout Code
