--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -14,7 +14,7 @@ jobs:
   lambdas:
     defaults:
       run:
-        working-directory: services/lambdas
+        working-directory: ./services/lambdas
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout Code
