--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -20,6 +20,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Run LS
+        run: "ls"
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
