--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -25,5 +25,9 @@
 		"tailwindcss": "4.0.12",
 		"typescript": "5.8.2",
 		"vite": "6.2.1"
+	},
+	"dependencies": {
+		"@googleapis/docs": "^5.0.1",
+		"googleapis": "^156.0.0"
 	}
 }
